# nvidia-quarterly-revenue

./: CHANGELOG.md  CLAUDE.md  README.md  charts.py  main.py  pyproject.toml  read_pdf.py  requirements.txt
.claude/skills/: README.md  add-new-quarter.md  analyze.md  setup-project.md  test-and-format.md
.github/workflows/: pdf-downloader.yml  pdf-monitor.yml  python-app.yml  release.yml  test.yml
batch/: import.py
data/: data.db  revenue_export.csv  revenue_export.json
src/: __init__.py  charts.py  database.py  main.py  read_pdf.py
src/utils/: create_release.py  download_pdf.py  find_latest_pdf.py  replace_text.py
tests/: database.py  find_latest_pdf.py  test_find_latest_pdf.py  test_replace_text.py
utils/: calculate_growth_rate.py  download_pdf.py  find_latest_pdf.py  replace_text.py
