[tool.poetry]
name = "nvidia-quarterly-revenue"
version = "0.1.1"
description = ""
authors = ["Ru Chern Chong <hello@ruchern.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
contourpy = "1.2.1"
cryptography = "^44.0.1"
cycler = "0.12.1"
fonttools = "4.52.1"
iniconfig = "2.0.0"
kiwisolver = "1.4.5"
matplotlib = "3.9.0"
numpy = "1.26.4"
packaging = "24.0"
pdfminer-six = "20231228"
pdfplumber = "0.11.0"
pillow = "10.3.0"
pluggy = "1.5.0"
pycparser = "2.22"
pyparsing = "3.1.2"
pypdfium2 = "4.30.0"
pytest = "8.2.1"
python-dateutil = "2.9.0.post0"
six = "1.16.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
