[project]
name = "nvidia-quarterly-revenue"
version = "0.1.1"
description = ""
authors = [{ name = "Ru Chern Chong", email = "hello@ruchern.dev" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
   "matplotlib>=3.10.1",
   "pdfminer-six>=20250327",
   "pdfplumber>=0.11.6",
]

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.5",
]
